--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 #odin {
     text-align: center;
-    background-color: black;
+    background-color:  rgb(67, 51, 134);
     color: white;
     font-size: 40px;
+    margin-top: 0;
+    padding: 18px;
 }
 
 .header {
@@ -13,10 +15,23 @@
     display: inline;
     padding: 20px;
     font-size: 20px;
+    border:solid black;
+    background-color:  rgb(67, 51, 134);
 }
 
 .center {
-    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.bottom {
+    margin-bottom: 100px;
+}
+
+body{
+    margin-right: 30%;
+    margin-left: 30%;
 }
 
 img {
@@ -24,10 +39,19 @@ img {
     height: 400px;
 }
 
-.beige {
-    background-color: blanchedalmond;
+li a {
+    color: white;
 }
 
 h1,h2,h3 {
-    color: rgb(67, 51, 134);
+    background-color: rgb(67, 51, 134);
+    color: white;
+    padding: 10px;
+    text-align: center;
 }
+
+ol, ul, p {
+    text-align: center;
+    list-style-position: inside;
+}
+
